# Control-System

./: CMakeLists.txt  README.md  replace_line.py
include/cl/: Alpha.hpp  ControlLaw.hpp  Jerk.hpp  Jounce.hpp  array.hpp  command.hpp  fda.hpp  plant.hpp  quadrotor.hpp
include/cl/Input/: Input.hpp
include/cs/: array.hpp  typedef.hpp
include/cs/orientation/: zero.hpp
include/cs/util/: timestep.hpp
src/Control/: Jounce.cpp
src/cl/: ControlLaw.cpp  Jerk.cpp  Jounce.cpp
src/cl/Input/: ControlLaw.cpp
src/cl/Outpur/: ControlLaw.cpp
src/cl/alpha/: base.cpp  omega.cpp  q.cpp
src/cs/: base.cpp
src/cs/orientation/: zero.cpp
test/: CMakeLists.txt
test/position-accel/: CMakeLists.txt
test/position-accel/src/: main.cpp
